tests/neg/semantic_pointer_compare_invalid.baa
// EXPECT: مقارنة المؤشر تتطلب مؤشراً مقابلاً أو قيمة عدم

صحيح الرئيسية() {
    صحيح س = ١.
    صحيح* م = &س.
    إذا (م == ١) {
        إرجع ١.
    }
    إرجع ٠.
}
